# AIMv6

./: .gitignore  Makefile.am  README.md  acinclude.m4  configure.ac  ct-ng-arm-unknown-linux-gnueabi.patch  env.am  modules.am  msim.conf.in
boot/: Makefile.am
boot/arch/: Makefile.am
boot/arch/armv7a/: Makefile.am  boot.lds.S  bootmain.c
boot/arch/i386/: Makefile.am  bootasm.S  bootmain.c
boot/arch/mips/mach-msim/: Makefile.am  bootsect.c
demo/: README.md
doc/: Makefile.am  addressing.md  fs.md  patterns.md  run.md  style.md  toolchain.md
drivers/: Makefile.am
drivers/ata/: Makefile.am  ata.h  ata_ide.c  ata_tf.h  sata_ide.c
drivers/block/: Makefile.am  hd.h  msim-ddisk-kernel.c  msim-ddisk-raw.c  msim-ddisk.c  msim-ddisk.h
drivers/common/: Makefile.am  core.c
drivers/hd/: Makefile.am  dos.c  hd.h  partition.c
drivers/interrupt-controller/: Makefile.am  i8259.c  i8259.h
drivers/io/: Makefile.am  io-mem.c  io-mem.h  io-port.c  io-port.h  io_mem.c  io_mem.h  io_port.c  io_port.h
drivers/pci/: Makefile.am  pci-core.c  pci-mem.c  pci.c  pci.h  pci_regs.h  sata_ide_pci.c
drivers/portio/: README.md
drivers/sd/: Makefile.am  sd-zynq-hw.h  sd-zynq.c  sd-zynq.h  sd.c  sd.h
drivers/serial/: Makefile.am  uart-msim-kernel.c  uart-msim.c  uart-msim.h  uart-ns16550-hw.h  uart-ns16550-kernel.c  uart-ns16550-regs.h  uart-ns16550.c  uart-ns16550.h  uart-zynq-hw.h  uart-zynq.c  uart-zynq.h  uart.c  uart.h
drivers/timer/: Makefile.am  timer-a9-hw.h  timer-a9.c  timer-a9.h  timer.c  timer.h
drivers/tty/: Makefile.am  default.c  tty.c  tty.h
firmware/: Makefile.am
firmware/arch/armv7a/: Makefile.am  firmware.lds.S  fwasm.S  fwmain.c
firmware/arch/mips/mach-msim/: Makefile.am  entry.S  firmware.ld  main.c
fs/: Makefile.am  VOP.c  VOP.h  bio.c  bio.h  init.c  mount.c  mount.h  namei.c  namei.h  spec.c  specdev.h  test.c  uio.c  uio.h  vfs.c  vfs.h  vnode.c  vnode.h
fs/ufs/: Makefile.am  dinode.h  hash.c  inode.h  ufs.h  ufsmount.h  vfsops.c  vop.c
fs/ufs/ext2fs/: Makefile.am  alloc.c  bio.c  bmap.c  create.c  dinode.h  dir.h  dump.c  ext2fs.c  ext2fs.h  inode.c  lookup.c  mount.c  readwrite.c  reclaim.c  spec.c  vget.c
include/: Makefile.am  attributes.h  bitmap.h  bitops.h  bootsect.h  buf.h  console.h  device.h  elf.h  elfops.h  errno.h  fcntl.h  file.h  gfp.h  init.h  limits.h  list.h  mm.h  mp.h  namespace.h  panic.h  percpu.h  pmm.h  proc.h  sched.h  sleep.h  syscall.h  timer.h  trap.h  ucred.h  util.h  vmm.h
include/aim/: Makefile.am  device.h  early_kmmap.h  export.h  initcalls.h  irq.h  kmmap.h  sync.h
include/arch/armv7a/: arch-bitops.h  arch-irq.h  arch-sync.h  arch-trap.h  arm-trap.h  atomic.h  io.h  mmu.h  regs.h  smp.h
include/arch/armv7a/mach-zynq/: mach.h
include/arch/i386/: arch-bitops.h  arch-irq.h  arch-sync.h  arch-trap.h  asm.h  atomic.h  io.h  irq.h  memlayout.h  mmu.h  platform.h  processor-flags.h  regs.h  segment.h
include/arch/mips/: addrspace.h  arch-bitops.h  arch-irq.h  arch-sync.h  arch-trap.h  asm.h  atomic.h  cp0regdef.h  decode.h  io.h  irq.h  mipsregs.h  mm.h  mmu.h  pgtable.h  regdef.h  regs.h  smp.h  stack.h  tlb.h
include/arch/mips/mach-loongson3a/: mach-conf.h  platform.h
include/arch/mips/mach-msim/: mach-conf.h  mach-smp.h
include/arch/mips32/: addrspace.h  io.h
include/arch/mips64/: addrspace.h
include/asm-generic/: Makefile.am  funcs.h  sync.h  vmaim.lds.h
include/libc/: stddef.h  string.h
include/libc/sys/: types.h
include/sys/: endian.h  param.h  types.h  uio.h
kern/: Makefile.am
kern/arch/: Makefile.am
kern/arch/armv7a/: Makefile.am  arch_init.c  entry.S  jump.c  mm.c  smp.c  sync.c  syscall.c  trap.c  traptest.c  vector.S  vmaim.lds.S
kern/arch/armv7a/mach-zynq/: Makefile.am  console-init.c
kern/arch/i386/: Makefile.am  arch_init.c  entry.S  mm.c  pgtable.c  sync.c  trap.c  trapentry.S  util.c  vmaim.lds.S
kern/arch/mips/: Makefile.am  arch_init.c  entry.S  kernel.ld  kernel.s  mm.c  pgtable.c  pgtable32.c  proc.c  smp.c  switch.S  sync.c  syscall.c  tlbex.S  tlbex32.S  trap.c  trapentry.S  traptest.c  vmaim.lds.S
kern/arch/mips/mach-generic/: Makefile.am  mach-init.c  pgtable.c
kern/arch/mips/mach-loongson3a/: Makefile.am  interrupt.c  introuter-ls3a.c  introuter-ls3a.h  mach-init.c  memory.c  smp.c  timer.c  tty.c
kern/arch/mips/mach-msim/: Makefile.am  console-init.c  interrupt.c  mach-init.c  memory.c  smp.c  timer.c  tty.c
kern/arch/mips/syscall/: forkret.c
kern/debug/: Makefile.am  panic.c
kern/dev/: Makefile.am  console.c
kern/dev/index/: Makefile.am  devlist.c  index.c
kern/init/: Makefile.am  early_init.c  init.c  initcalls.c
kern/lib/: Makefile.am
kern/lib/libbitmap/: Makefile.am  bitmap_and.c  bitmap_andnot.c  bitmap_clear.c  bitmap_complement.c  bitmap_equal.c  bitmap_find_first_bit.c  bitmap_find_first_zero_bit.c  bitmap_find_last_bit.c  bitmap_find_next_bit.c  bitmap_find_next_zero_bit.c  bitmap_full.c  bitmap_intersects.c  bitmap_or.c  bitmap_set.c  bitmap_shift_left.c  bitmap_shift_right.c  bitmap_subset.c  bitmap_weight.c  bitmap_xor.c
kern/mm/: Makefile.am  mmu.c  test.c  uvm.c
kern/mm/kmmap/: Makefile.am  early_kmmap.c  kmlist.c  kmmap.c
kern/mm/pmm/: Makefile.am  ff.c  pmm.c
kern/mm/vmm/: Makefile.am  flff.c  lab.c  slab.c  vmm.c
kern/proc/: Makefile.am  initproc.c  namespace.c  proc.c  proctree.c  test.c
kern/proc/sched/: Makefile.am  sched.c  sched_plain.c
kern/smp/: Makefile.am  smp.c
kern/syscall/: Makefile.am  README.md  execve.c  fork.c  getpid.c  read.c  sched_yield.c  syscall.c  write.c
kern/timer/: Makefile.am  timer.c
lib/: Makefile.am
lib/csu/: Makefile.am  (+1 more)
lib/libc/: Makefile.am  README  dirent.h  errno.c  memcmp.c  memmove.c  snprintf.c  stdarg.h  stddef.h  stdio.h  strcmp.c  string.h  strlcat.c  strlcpy.c  strlen.c  strnlen.c  syscall-list.S  syscalls.h  unistd.h
lib/libc/arch/: Makefile.am
lib/libc/arch/armv7a/: Makefile.am  syscall.S
lib/libc/arch/i386/: Makefile.am  memset.c
lib/libc/arch/mips/: Makefile.am  default.lds.S  syscall.S
m4/: ax_gcc_var_attribute.m4
user/: Makefile.am
(+15 files in other folders)
